# serializer version: 1
# name: TestAttachGroups.test_multiple_documents
  list([
    dict({
      'active': True,
      'administrator': False,
      'force_reset': False,
      'groups': list([
        dict({
          'id': '7cf872dc',
          'name': 'architects',
          'permissions': dict({
            'cancel_job': False,
            'create_ref': False,
            'create_sample': False,
            'modify_hmm': False,
            'modify_subtraction': False,
            'remove_file': False,
            'remove_job': False,
            'upload_file': False,
          }),
        }),
        dict({
          'id': 'fb085f7f',
          'name': 'hydrogeologists',
          'permissions': dict({
            'cancel_job': False,
            'create_ref': False,
            'create_sample': False,
            'modify_hmm': False,
            'modify_subtraction': False,
            'remove_file': False,
            'remove_job': False,
            'upload_file': False,
          }),
        }),
        dict({
          'id': 'bf1b993c',
          'name': 'musicians',
          'permissions': dict({
            'cancel_job': False,
            'create_ref': False,
            'create_sample': False,
            'modify_hmm': False,
            'modify_subtraction': False,
            'remove_file': False,
            'remove_job': False,
            'upload_file': False,
          }),
        }),
      ]),
      'handle': 'kelsey56',
      'id': '3cbb22cc',
      'invalidate_sessions': False,
      'last_password_change': datetime,
      'password': bytes,
      'primary_group': None,
      'settings': dict({
        'quick_analyze_workflow': 'pathoscope_bowtie',
        'show_ids': True,
        'show_versions': True,
        'skip_quick_analyze_dialog': True,
      }),
    }),
    dict({
      'active': True,
      'administrator': False,
      'force_reset': False,
      'groups': list([
        dict({
          'id': 'f60bae36',
          'name': 'haematologists',
          'permissions': dict({
            'cancel_job': False,
            'create_ref': False,
            'create_sample': False,
            'modify_hmm': False,
            'modify_subtraction': False,
            'remove_file': False,
            'remove_job': False,
            'upload_file': False,
          }),
        }),
        dict({
          'id': 'da42dca3',
          'name': 'neurosurgeons',
          'permissions': dict({
            'cancel_job': False,
            'create_ref': False,
            'create_sample': False,
            'modify_hmm': False,
            'modify_subtraction': False,
            'remove_file': False,
            'remove_job': False,
            'upload_file': False,
          }),
        }),
        dict({
          'id': '09d01419',
          'name': 'optometrists',
          'permissions': dict({
            'cancel_job': False,
            'create_ref': False,
            'create_sample': False,
            'modify_hmm': False,
            'modify_subtraction': False,
            'remove_file': False,
            'remove_job': False,
            'upload_file': False,
          }),
        }),
      ]),
      'handle': 'darrellmorris',
      'id': '153ff459',
      'invalidate_sessions': False,
      'last_password_change': datetime,
      'password': bytes,
      'primary_group': None,
      'settings': dict({
        'quick_analyze_workflow': 'pathoscope_bowtie',
        'show_ids': True,
        'show_versions': True,
        'skip_quick_analyze_dialog': True,
      }),
    }),
  ])
# ---
# name: TestAttachGroups.test_no_groups
  dict({
    'active': True,
    'administrator': False,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'invalidate_sessions': False,
    'last_password_change': datetime,
    'password': bytes,
    'primary_group': None,
    'settings': dict({
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    }),
  })
# ---
# name: TestAttachGroups.test_single_document
  dict({
    'active': True,
    'administrator': False,
    'force_reset': False,
    'groups': list([
      dict({
        'id': '7cf872dc',
        'name': 'architects',
        'permissions': dict({
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        }),
      }),
      dict({
        'id': 'fb085f7f',
        'name': 'hydrogeologists',
        'permissions': dict({
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        }),
      }),
      dict({
        'id': 'bf1b993c',
        'name': 'musicians',
        'permissions': dict({
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        }),
      }),
    ]),
    'handle': 'kelsey56',
    'id': '3cbb22cc',
    'invalidate_sessions': False,
    'last_password_change': datetime,
    'password': bytes,
    'primary_group': None,
    'settings': dict({
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    }),
  })
# ---
# name: TestAttachPrimaryGroup.test_multiple_documents
  list([
    dict({
      'active': True,
      'administrator': False,
      'force_reset': False,
      'groups': list([
        dict({
          'id': 'bf1b993c',
          'name': 'musicians',
          'permissions': dict({
            'cancel_job': False,
            'create_ref': False,
            'create_sample': False,
            'modify_hmm': False,
            'modify_subtraction': False,
            'remove_file': False,
            'remove_job': False,
            'upload_file': False,
          }),
        }),
      ]),
      'handle': 'qtaylor',
      'id': '7cf872dc',
      'invalidate_sessions': False,
      'last_password_change': datetime,
      'password': bytes,
      'primary_group': None,
      'settings': dict({
        'quick_analyze_workflow': 'pathoscope_bowtie',
        'show_ids': True,
        'show_versions': True,
        'skip_quick_analyze_dialog': True,
      }),
    }),
    dict({
      'active': True,
      'administrator': False,
      'force_reset': False,
      'groups': list([
        dict({
          'id': 'fb085f7f',
          'name': 'hydrogeologists',
          'permissions': dict({
            'cancel_job': False,
            'create_ref': False,
            'create_sample': False,
            'modify_hmm': False,
            'modify_subtraction': False,
            'remove_file': False,
            'remove_job': False,
            'upload_file': False,
          }),
        }),
      ]),
      'handle': 'fcarpenter',
      'id': '3cbb22cc',
      'invalidate_sessions': False,
      'last_password_change': datetime,
      'password': bytes,
      'primary_group': None,
      'settings': dict({
        'quick_analyze_workflow': 'pathoscope_bowtie',
        'show_ids': True,
        'show_versions': True,
        'skip_quick_analyze_dialog': True,
      }),
    }),
  ])
# ---
# name: TestAttachPrimaryGroup.test_no_primary_group
  dict({
    'active': True,
    'administrator': False,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'invalidate_sessions': False,
    'last_password_change': datetime,
    'password': bytes,
    'primary_group': None,
    'settings': dict({
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    }),
  })
# ---
# name: TestAttachPrimaryGroup.test_single_document
  dict({
    'active': True,
    'administrator': False,
    'force_reset': False,
    'groups': list([
      dict({
        'id': 'bf1b993c',
        'name': 'musicians',
        'permissions': dict({
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        }),
      }),
    ]),
    'handle': 'laura56',
    'id': 'fb085f7f',
    'invalidate_sessions': False,
    'last_password_change': datetime,
    'password': bytes,
    'primary_group': None,
    'settings': dict({
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    }),
  })
# ---
